src/objects/FC_Revenue_Share__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Cancellation_Revenue__c</fullName>
        <label>Allocated Cancellation Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Delta_Revenue__c</fullName>
        <label>Allocated Delta Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocated Geography</label>
        <referenceTo>MetroclientGeography__c</referenceTo>
        <relationshipLabel>(FC) Revenue Shares</relationshipLabel>
        <relationshipName>FC_Revenue_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocated_New_Revenue__c</fullName>
        <label>Allocated New Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Renewal_Revenue__c</fullName>
        <label>Allocated Renewal Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Total_Revenue__c</fullName>
        <label>Allocated Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Percentage__c</fullName>
        <label>Allocation %</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <formula>if(Opportunity__r.CloseDate &gt; End_Date__c ,Opportunity__r.CloseDate,End_Date__c)</formula>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geography_Type__c</fullName>
        <formula>Seg3_Record__r.Geography_Type__c</formula>
        <label>Geography Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <formula>Seg3_Record__r.Geography__c</formula>
        <label>Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obsolete__c</fullName>
        <formula>!(Opportunity__r.LastModifiedDate == Opportunity_Last_Modified_Date__c &amp;&amp;  Opportunity__r.FC_Most_Recent_OLI_Last_Modified_Date__c == Recent_Opp_Line_Item_Last_Modified_Date__c)</formula>
        <label>Obsolete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Last_Modified_Date__c</fullName>
        <label>Opportunity Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_ID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Line Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>(FC) Revenue Shares</relationshipLabel>
        <relationshipName>FC_Revenue_Shares</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Processed_By_Batchable_On__c</fullName>
        <label>Processed By Batchable On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Seg3_Record__r.Metrostudy_Product__c</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Type__c</fullName>
        <label>Purchase Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RD_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RD Assignment</label>
        <referenceTo>MetrostudySalesRegionAssignment__c</referenceTo>
        <relationshipLabel>(FC) Revenue Shares</relationshipLabel>
        <relationshipName>FC_Revenue_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RD__c</fullName>
        <formula>TRIM(RD_Assignment__r.User__r.FirstName &amp; &quot; &quot; &amp; RD_Assignment__r.User__r.LastName)</formula>
        <label>RD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Opp_Line_Item_Last_Modified_Date__c</fullName>
        <label>Recent Opp. Line Item Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Seg3_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seg3 Record</label>
        <referenceTo>FC_Metroclient_Product_Geography_Seg3__c</referenceTo>
        <relationshipLabel>(FC) Revenue Shares</relationshipLabel>
        <relationshipName>FC_Revenue_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seg3__c</fullName>
        <formula>TEXT(Seg3_Record__r.Seg3__c)</formula>
        <label>Seg3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_2__c</fullName>
        <label>Segment 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>(FC) Revenue Share</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>(FC) Revenue Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(FC) Revenue Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>